# chronoscribe

./: .gitignore  LICENSE  Readme.md  docker-compose.yml  index.js  package-lock.json  package.json
app-ui/: .eslintrc.json  .prettierrc  Dockerfile  README.md  angular.json  index.js  package-lock.json  package.json  proxy.conf.json  tailwind.config.js  tsconfig.app.json  tsconfig.spec.json
app-ui/src/: index.html  main.ts  proxy.conf.json  styles.scss
app-ui/src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts
app-ui/src/app/core/authentication/: auth.guard.ts  (+1 more)
app-ui/src/app/shared/: shared.module.ts
app-ui/src/environments/: environment.ts
backend/: .dockerignore  .gitignore  Dockerfile  app.py  config.py  config.toml  database.py  entrypoint.sh  measurements.json  pyproject.toml  requirements.txt
backend/app/: TokenVerification.py  config.py  database.py  main.py
backend/app/core/: __init__.py  cache_system.py  connection_manager.py  login.py  utils.py
backend/app/modules/: __init__.py
backend/app/modules/room/: __init__.py  cache.py  crud.py  gcp.py  model.py  routes.py  service.py
backend/app/modules/summarizer/: bart_model.py  google_llm_model.py
backend/app/modules/user/: model.py  routes.py  service.py
backend/core/: login.py  utils.py
backend/modules/room/: connection_manager.py  model.py  routes.py  service.py
backend/modules/summarizer/: model.py
backend/modules/user/: model.py  routes.py  service.py
backend/scripts/: format.sh
kafka-cluster/: docker-compose.yml
keycloak/: docker-compose.yml
nginx/: Dockerfile  nginx.conf
ngnix/: ngnix.conf
redis/: Dockerfile
summarizer/: .env  sample .ipynb  sample_gemini.ipynb
(+136 files in other folders)
